--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^13.5.0",
     "babel-jest": "^ 24.9.0",
     "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
