--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "3.3.0",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "webpack": "4.41.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,8 +48,10 @@
     "@storybook/addons": "^5.3.9",
     "@storybook/preset-create-react-app": "^1.5.2",
     "@storybook/react": "^5.3.9",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.7.0",
+    "babel-eslint": "10.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
