--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "bootstrap": "^4.5.2",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-scripts": "3.3.0",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-scripts": "4.0.0",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
     "typescript": "^3.7.5",
@@ -49,11 +49,12 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.9",
-    "@storybook/addon-links": "^5.3.9",
-    "@storybook/addons": "^5.3.9",
-    "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.9",
+    "@storybook/addon-actions": "^6.3.6",
+    "@storybook/addon-links": "^6.3.6",
+    "@storybook/addons": "^6.3.6",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.6",
+    "@storybook/theming": "^6.3.6",
     "babel-eslint": "^10.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
